--- a/index.html
+++ b/index.html
@@ -29,5 +29,42 @@
     </style>
   </head>
   <body>
+    <!-- Banner Section -->
+    <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto">
+      <div class="banner-left space-y-4">
+        <h2 class="text-[75px] font-bold">
+          It's good <br />
+          tea time at The <br />
+          Tea House
+        </h2>
+        <p class="text-[#777777]">
+          Tea and Botanical Solutions Supplier Give Optimum <br />
+          Satisfaction To Your Taste Buds.
+        </p>
+        <button
+          class="bg-linear-to-r from-[#e97120] to-[#ff0c0c] text-white font-semibold px-5 py-3 border rounded-md"
+        >
+          Explore More
+          <span class="-rotate-45 inline-block"
+            ><i class="fa-solid fa-arrow-right-long"></i
+          ></span>
+        </button>
+      </div>
+
+      <div class="banner-right flex justify-end items-end relative">
+        <img src="./images/banner.png" alt="Banner Image" />
+
+        <!-- Rating div -->
+        <div
+          class="bg-white rounded-xl shadow-2xl flex gap-4 justify-center items-center w-[220px] absolute left-[200px] bottom-[25px] px-3 py-4"
+        >
+          <img src="./images/banner_rating.png" alt="Rating Star" />
+          <div>
+            <h2 class="text-3xl font-bold">5.00</h2>
+            <p>Trust Rating</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
