complete the feature section

--- a/index.html
+++ b/index.html
@@ -66,5 +66,59 @@
         </div>
       </div>
     </section>
+
+    <!-- Featured Section -->
+    <section class="container mx-auto my-[85px]">
+      <!-- Featured Section Header -->
+      <div class="max-w-[65%] mx-auto text-center mb-[50px]">
+        <h2 class="text-[45px] font-bold">Our Featured Products</h2>
+        <p class="text-[#777777]">
+          Discover our premium selection of teas, carefully sourced from the
+          finest gardens. Each tea is crafted to deliver exceptional flavor,
+          aroma, and health benefits. Experience the perfect blend of tradition
+          and quality in every cup.
+        </p>
+      </div>
+
+      <div
+        class="featured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-5"
+      >
+        <!-- Milk Tea Card -->
+        <div
+          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+        >
+          <img src="./images/tea-1.png" alt="Milk Tea" class="mx-auto mb-4" />
+          <h2 class="text-2xl font-semibold">Milk Tea</h2>
+          <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
+        </div>
+
+        <!-- Black Tea Card -->
+        <div
+          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+        >
+          <img src="./images/tea-2.png" alt="Black Tea" class="mx-auto mb-4" />
+          <h2 class="text-2xl font-semibold">Black Tea</h2>
+          <p class="text-[#777777]">Pairs perfectly with fresh milk</p>
+        </div>
+
+        <!-- Lemon Tea Card -->
+        <div
+          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+        >
+          <img src="./images/tea-3.png" alt="Lemon Tea" class="mx-auto mb-4" />
+          <h2 class="text-2xl font-semibold">Lemon Tea</h2>
+          <p class="text-[#777777]">Can be enjoyed with milk or cream</p>
+        </div>
+
+        <!-- Green Tea Card -->
+        <div
+          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+        >
+          <img src="./images/tea-4.png" alt="Green Tea" class="mx-auto mb-4" />
+          <h2 class="text-2xl font-semibold">Green Tea</h2>
+          <p class="text-[#777777]">Optional milk or cream addition</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
