--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       >
         <!-- Milk Tea Card -->
         <div
-          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+          class="featured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
         >
           <img src="./images/tea-1.png" alt="Milk Tea" class="mx-auto mb-4" />
           <h2 class="text-2xl font-semibold">Milk Tea</h2>
@@ -94,7 +94,7 @@
 
         <!-- Black Tea Card -->
         <div
-          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+          class="featured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
         >
           <img src="./images/tea-2.png" alt="Black Tea" class="mx-auto mb-4" />
           <h2 class="text-2xl font-semibold">Black Tea</h2>
@@ -103,7 +103,7 @@
 
         <!-- Lemon Tea Card -->
         <div
-          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+          class="featured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
         >
           <img src="./images/tea-3.png" alt="Lemon Tea" class="mx-auto mb-4" />
           <h2 class="text-2xl font-semibold">Lemon Tea</h2>
@@ -112,12 +112,58 @@
 
         <!-- Green Tea Card -->
         <div
-          class="featured-card bg-[#f4f4f4] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
+          class="featured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f400] p-7 text-center rounded-md hover:shadow-lg transition-shadow duration-300"
         >
           <img src="./images/tea-4.png" alt="Green Tea" class="mx-auto mb-4" />
           <h2 class="text-2xl font-semibold">Green Tea</h2>
           <p class="text-[#777777]">Optional milk or cream addition</p>
         </div>
+      </div>
+    </section>
+
+    <!-- Great tea section -->
+    <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div class="great-tea-left grid grid-cols-2 grid-rows-3 gap-8">
+        <div
+          class="row-span-1 bg-linear-to-r from-[#ff1010] to-[#ff761b] rounded-md opacity-10"
+        ></div>
+        <div
+          class="row-span-2 flex justify-center items-center rounded-md bg-[#e6a6231a]"
+        >
+          <img src="./images/fresh-1.png" alt="" />
+        </div>
+        <div
+          class="row-span-2 flex justify-center items-center rounded-md bg-[#5776391a]"
+        >
+          <img src="./images/fresh-2.png" alt="" />
+        </div>
+        <div
+          class="row-span-1 bg-linear-to-r from-[#d9d9d9] to-[#ffffff00] rounded-md"
+        ></div>
+      </div>
+
+      <div class="great-tea-right space-y-4">
+        <h2 class="text-[45px] font-bold">
+          Great Tea, Freshly <br />
+          Presented
+        </h2>
+        <p class="text-[#777777]">
+          The meaning of gong cha is chanese is to provide the best tea to
+          emperor from all possessions . It represents the highest quality and
+          self expectation. Establishing in 2006, Gong cha had been deeply
+          appreciated by its custoers because of good words of mouth and unique
+          customized service orginated from Taiwan.
+        </p>
+        <h2 class="text-[20px] font-bold">Unique Taste</h2>
+        <p class="text-[#777777]">
+          A Unique and different style from other teapots gives a <br />
+          luxurious and minimalist impression
+        </p>
+        <h2 class="text-[20px] font-bold">Premium Quality</h2>
+        <p class="text-[#777777]">
+          Premium Quality that makes tea more elegant and more <br />
+          durable when you use it.
+        </p>
       </div>
     </section>
   </body>
