complete the client section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
     </section>
 
     <!-- Great tea section -->
-    <section class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+    <section
+      class="container mx-auto grid grid-cols-1 md:grid-cols-2 gap-8 mb-[85px]"
+    >
       <div class="great-tea-left grid grid-cols-2 grid-rows-3 gap-8">
         <div
           class="row-span-1 bg-linear-to-r from-[#ff1010] to-[#ff761b] rounded-md opacity-10"
@@ -166,5 +168,89 @@
         </p>
       </div>
     </section>
+
+    <!-- Meet our super clients section -->
+    <section
+      class="container mx-auto grid grid-cols-1 lg:grid-cols-2 gap-[75px] lg:gap-8 mb-[85px] rounded-xl bg-linear-to-r from-[#ff8938] to-[#ff0000] p-[70px]"
+    >
+      <div class="meet-our-client-left text-white flex items-center">
+        <div class="space-y-4">
+          <h2 class="text-[45px] font-bold">
+            Meet Our Super <br />
+            Clients
+          </h2>
+          <p class="font-medium text-[#f4f4f4]">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button class="px-5 py-3 font-semibold bg-white rounded-md">
+            <span
+              class="bg-linear-to-r from-[#ff8938] to-[#ff0000] bg-clip-text text-transparent"
+              >Show All</span
+            >
+          </button>
+        </div>
+      </div>
+      <div class="meet-our-client-right relative pl-[30px] sm:pl-[100px]">
+        <!-- Review Card -->
+        <div
+          class="rounded-lg bg-white p-8 w-full sm:w-[430px] absolute -left-[15px] top-[100px] z-50 space-y-2"
+        >
+          <p class="text-[#777777]">
+            We are providing the best and suitable home insurance services for
+            the people who are interested to treatment
+          </p>
+          <h2 class="font-bold text-xl">Ilham Yuda</h2>
+          <h3 class="text-[#777777]">Businessman</h3>
+          <div
+            class="absolute -top-[30px] -left-[30px] p-2 bg-white rounded-full"
+          >
+            <img src="./images/client.png" alt="" />
+          </div>
+          <img
+            src="./images/circles.png"
+            alt=""
+            class="absolute right-3 bottom-3"
+          />
+        </div>
+
+        <!-- Review Card -->
+        <div
+          class="rounded-lg bg-white p-8 w-full sm:w-[430px] relative space-y-2 mb-[45px] opacity-30"
+        >
+          <p class="text-[#777777]">
+            We are providing the best and suitable home insurance services for
+            the people who are interested to treatment
+          </p>
+          <h2 class="font-bold text-xl">Ilham Yuda</h2>
+          <h3 class="text-[#777777]">Businessman</h3>
+          <div
+            class="absolute -top-[30px] -left-[30px] p-2 bg-white rounded-full"
+          >
+            <img src="./images/client.png" alt="" />
+          </div>
+        </div>
+
+        <!-- Review Card -->
+        <div
+          class="rounded-lg bg-white p-8 w-full sm:w-[430px] relative space-y-2 opacity-30"
+        >
+          <p class="text-[#777777]">
+            We are providing the best and suitable home insurance services for
+            the people who are interested to treatment
+          </p>
+          <h2 class="font-bold text-xl">Ilham Yuda</h2>
+          <h3 class="text-[#777777]">Businessman</h3>
+          <div
+            class="absolute -top-[30px] -left-[30px] p-2 bg-white rounded-full"
+          >
+            <img src="./images/client.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    
   </body>
 </html>
