--- a/index.html
+++ b/index.html
@@ -251,6 +251,85 @@
         </div>
       </div>
     </section>
-    
+
+    <!-- Footer Section -->
+    <footer class="bg-[#ffefe9] p-12">
+      <section class="container mx-auto space-y-5">
+        <!-- Top Footer -->
+        <div class="flex justify-between">
+          <img src="./images/cup.png" alt="" />
+          <div class="flex gap-3 items-center">
+            <p class="hidden sm:block">Ready to get started?</p>
+            <button
+              class="bg-linear-to-r from-[#e97120] to-[#ff0c0c] text-white font-semibold px-5 py-3 border rounded-md"
+            >
+              Get started
+              <span class="-rotate-45 inline-block">
+                <i class="fa-solid fa-arrow-right-long"></i>
+              </span>
+            </button>
+          </div>
+        </div>
+
+        <!-- Footer Links -->
+        <div
+          class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4 text-center md:text-left"
+        >
+          <ul class="space-y-1">
+            <li class="text-xl font-semibold">Quick Links</li>
+            <li class="text-[#777777]"><a href="">Home</a></li>
+            <li class="text-[#777777]"><a href="">About Us</a></li>
+            <li class="text-[#777777]"><a href="">Insurance</a></li>
+            <li class="text-[#777777]"><a href="">Privacy Policy</a></li>
+          </ul>
+
+          <ul class="space-y-1">
+            <li class="text-xl font-semibold">Our Service</li>
+            <li class="text-[#777777]"><a href="">Life Insurance</a></li>
+            <li class="text-[#777777]"><a href="">Car Insurance</a></li>
+            <li class="text-[#777777]"><a href="">Health Insurance</a></li>
+            <li class="text-[#777777]"><a href="">House Insurance</a></li>
+          </ul>
+
+          <ul class="space-y-1">
+            <li class="text-xl font-semibold">Help</li>
+            <li class="text-[#777777]"><a href="">FAQs</a></li>
+            <li class="text-[#777777]"><a href="">Contact Us</a></li>
+          </ul>
+
+          <div class="space-y-4">
+            <h2 class="font-semibold text-3xl">
+              Subscribe to our <br />
+              newsletter
+            </h2>
+            <input
+              type="email"
+              name=""
+              id=""
+              placeholder="Email address"
+              class="border-b-2 pb-2 outline-none"
+            />
+            <button
+              class="h-9 w-9 bg-linear-to-r from-[#e97120] to-[#ff0c0c] text-white font-semibold border rounded-full"
+            >
+              <span>
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </button>
+
+            <div class="flex gap-5">
+              <span><i class="fa-brands fa-facebook-f"></i></span>
+              <span><i class="fa-brands fa-twitter"></i></span>
+              <span><i class="fa-brands fa-instagram"></i></span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Copyright Footer -->
+        <p class="text-[#404040] text-[14px] text-center">
+          @ 2026 UI Design.to - All rights reserved.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
