--- a/index.html
+++ b/index.html
@@ -252,6 +252,85 @@
       </div>
     </section>
 
+    <!-- News & Events -->
+    <section class="container mx-auto my-[85px]">
+      <!-- Featured Section Header -->
+      <div class="max-w-[65%] mx-auto text-center mb-[50px]">
+        <h2 class="text-[45px] font-bold">News & Events</h2>
+        <p class="text-[#777777]">Discover the latest tea from our tea house</p>
+      </div>
+
+      <div
+        class="event-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5"
+      >
+        <!-- Event Card 1 -->
+        <div
+          class="event-card bg-linear-to-b text-left from-[#f4f4f4] to-[#f4f4f400] p-4 space-y-3 rounded-2xl hover:shadow-lg transition-shadow duration-300"
+        >
+          <img
+            src="./images/news-1.png"
+            alt="Tea tasting event"
+            class="mx-auto mb-4 p-1 rounded-2xl w-full"
+          />
+          <p class="text-[#777777]">Mar 15, 2025</p>
+          <h2 class="text-2xl font-semibold">Spring Tea Tasting</h2>
+          <p class="text-[#777777] mt-2">
+            Sample our new spring harvest teas including first flush Darjeeling
+            and Japanese Sencha
+          </p>
+          <h4
+            class="text-amber-700 font-medium mt-4 hover:text-amber-900 cursor-pointer"
+          >
+            Learn More →
+          </h4>
+        </div>
+
+        <!-- Event Card 2 -->
+        <div
+          class="event-card bg-linear-to-b text-left from-[#f4f4f4] to-[#f4f4f400] p-4 space-y-3 rounded-2xl hover:shadow-lg transition-shadow duration-300"
+        >
+          <img
+            src="./images/news-2.png"
+            alt="Tea tasting event"
+            class="mx-auto mb-4 p-1 rounded-2xl w-full"
+          />
+          <p class="text-[#777777]">Apr 10, 2025</p>
+          <h2 class="text-2xl font-semibold">Traditional Tea Ceremony</h2>
+          <p class="text-[#777777] mt-2">
+            Experience the art of Japanese tea ceremony with our master tea
+            instructor
+          </p>
+          <h4
+            class="text-amber-700 font-medium mt-4 hover:text-amber-900 cursor-pointer"
+          >
+            Learn More →
+          </h4>
+        </div>
+
+        <!-- Event Card 3 -->
+        <div
+          class="event-card bg-linear-to-b text-left from-[#f4f4f4] to-[#f4f4f400] p-4 space-y-3 rounded-2xl hover:shadow-lg transition-shadow duration-300"
+        >
+          <img
+            src="./images/news-3.png"
+            alt="Tea tasting event"
+            class="mx-auto mb-4 p-1 rounded-2xl w-full"
+          />
+          <p class="text-[#777777]">May 05, 2025</p>
+          <h2 class="text-2xl font-semibold">Exclusive Green Tea</h2>
+          <p class="text-[#777777] mt-2">
+            Introducing our ceremonial grade matcha from Uji, Japan - 50% off
+            first purchase
+          </p>
+          <h4
+            class="text-amber-700 font-medium mt-4 hover:text-amber-900 cursor-pointer"
+          >
+            Learn More →
+          </h4>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer Section -->
     <footer class="bg-[#ffefe9] p-12">
       <section class="container mx-auto space-y-5">
